# jags-rescorlaWagner

./: README  README.md  configure.ac
src/: Makefile.am  rescorlaWagner.cc
src/functions/: Makefile.am  resWagner.cc  resWagner.h
